// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectInput /> with a parsed value 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="apple"
  >
    apple
  </option>
  <option
    value="bananas"
  >
    bananas
  </option>
  <option
    value="cranberries"
  >
    cranberries
  </option>
</select>
`;

exports[`<SelectInput /> with a required attribute 1`] = `
<select
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
>
  <option
    disabled={true}
    value=""
  >
    Select an option
  </option>
</select>
`;

exports[`<SelectInput /> with no props 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
>
  <option
    value=""
  >
    Select an option
  </option>
</select>
`;

exports[`<SelectInput /> with options from array of objects w/ parsing props 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="apple"
  >
    apple
  </option>
  <option
    value="bananas"
  >
    bananas
  </option>
  <option
    value="cranberries"
  >
    cranberries
  </option>
</select>
`;

exports[`<SelectInput /> with options from array of strings 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="apples"
  >
    apples
  </option>
  <option
    value="bananas"
  >
    bananas
  </option>
  <option
    value="cranberries"
  >
    cranberries
  </option>
</select>
`;

exports[`<SelectInput /> with placeholder option text 1`] = `
<select
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
>
  <option
    value=""
  >
    Select one por favor
  </option>
</select>
`;
